fixed horizontal scroll issue on smaller screens

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -28,8 +28,9 @@ h1 {
 
 h2 {
   color: #47b9a9;
-  font-size: 4em;
+  font-size: 3.5em;
   font-family: "Poppins", sans-serif;
+  margin: auto;
 }
 
 h3 {
